--- a/requirements.txt
+++ b/requirements.txt
@@ -1,94 +1,26 @@
-altair==4.2.2
-ansi2html==1.8.0
-appnope==0.1.3
-astor==0.8.1
-attrs==22.2.0
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-base58==2.1.1
-blinker==1.5
-cachetools==5.3.0
-certifi==2022.12.7
-charset-normalizer==3.0.1
-click==8.1.3
-cycler==0.11.0
-dash==2.8.1
-dash-bootstrap-components==1.4.0
-dash-bootstrap-templates==1.0.8
+Brotli==1.0.9
+click==8.0.3
+dash==2.2.0
+dash-bootstrap-components==1.4.1
 dash-core-components==2.0.0
 dash-daq==0.5.0
 dash-html-components==2.0.0
-dash-loading-spinners==1.0.0
 dash-table==5.0.0
-debugpy==1.6.6
-decorator==5.1.1
-entrypoints==0.4
-et-xmlfile==1.1.0
-Flask==2.2.3
-gitdb==4.0.10
-GitPython==3.1.31
+Flask==2.0.2
+Flask-Compress==1.10.1
 gunicorn==20.1.0
-idna==3.4
-importlib-metadata==6.0.0
-importlib-resources==5.12.0
-ipykernel==6.16.2
-ipython==7.34.0
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-jsonpickle==3.0.1
-jsonschema==4.17.3
-jupyter-dash==0.4.2
-jupyter_client==7.4.9
-jupyter_core==4.12.0
-kiwisolver==1.4.4
-MarkupSafe==2.1.2
-matplotlib==3.2.2
-matplotlib-inline==0.1.6
-nest-asyncio==1.5.6
-networkx==2.5
-numpy==1.21.6
-openpyxl==3.1.1
-packaging==23.0
-palettable==3.3.0
+importlib-metadata==6.1.0
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+numpy==1.24.2
 pandas==1.1.5
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.4.0
-pkgutil_resolve_name==1.3.10
-plotly==5.13.1
-prompt-toolkit==3.0.38
-protobuf==4.22.0
-psutil==5.9.4
-ptyprocess==0.7.0
-pyarrow==11.0.0
-pydeck==0.8.0
-Pygments==2.14.0
-pyparsing==3.0.9
-pyrsistent==0.19.3
+plotly==5.5.0
 python-dateutil==2.8.2
 pytz==2022.7.1
-pytz-deprecation-shim==0.1.0.post0
-pyvis==0.1.8.2
-pyzmq==25.0.0
-requests==2.28.2
-retrying==1.3.4
 six==1.16.0
-smmap==5.0.0
-streamlit==0.73.1
-tenacity==8.2.2
-toml==0.10.2
-toolz==0.12.0
-tornado==6.2
-traitlets==5.9.0
+tenacity==8.0.1
 typing_extensions==4.5.0
-tzdata==2022.7
-tzlocal==4.2
-urllib3==1.26.14
-validators==0.20.0
-watchdog==2.3.1
-wcwidth==0.2.6
-Werkzeug==2.2.3
+Werkzeug==2.0.2
 xlrd==2.0.1
 zipp==3.15.0
